--- a/index.html
+++ b/index.html
@@ -111,13 +111,21 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+      <a id="logo-container" href="#" class="brand-logo"><image src="logo.png"></a>
+      
+	  
+	  <ul class="right hide-on-med-and-down">
+		<li><a href="#">Home</a></li>
+		<li><a href="#">Hướng dẫn tìm vé</a></li>
+        <li><a href="#">Liên hệ</a></li>
       </ul>
+	  
 
+	  <!-- menu ở chế độ mobile  -->
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">home</a></li>
+		<li><a href="#">Hướng dẫn tìm vé</a></li>
+		<li><a href="#">Liên hệ</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -228,14 +236,13 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="img9.jpg" alt="Unsplashed background img 1" style="height:0px;width:0px"></div>
   </div>
+ 
 
 
   <div class="container">
     <div class="section">
-	
-
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
@@ -274,7 +281,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Hơn 100 đại lý lớn đang tin dùng</h5>
         </div>
       </div>
     </div>
