fix loi overflow: hidden cua select (nam trong parallax-container)

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
                 ;
             });
         </script>
+		
+
+		
+
 </head>
 <body>
   <nav class="white" role="navigation">
@@ -131,7 +135,7 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container"><!-- class quy dinh mau chu cua banner trong style.css -->
+  <div id="index-banner" class="parallax-container"><!-- class quy dinh mau chu cua banner trong style.css / hinh nen -->
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row">
@@ -236,7 +240,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="imga.jpg" alt="Unsplashed background img 1"></div> <!-- hinh cua banner -->
+    <div class="parallax"><img src="imga.jpg" alt="Unsplashed background img 1" style="height:500px;width:100%;"></div> <!-- hinh cua banner -->
   </div>
  
 
@@ -278,7 +282,6 @@
   
   <div class="container">
         <div class="row">
- 
 		  <img src="imgbr.png" alt="Unsplashed background img 2" class="col s12"> <!-- hinh cac hang may bay -->
         </div>
    </div>
