hoan thien giao dien co ban

--- a/index.html
+++ b/index.html
@@ -117,11 +117,20 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo"><image src="logo.png"></a>
       
-	  
+	  <!-- menu ở chế độ desktop  -->
 	  <ul class="right hide-on-med-and-down">
 		<li><a href="#">Home</a></li>
 		<li><a href="#">Hướng dẫn tìm vé</a></li>
         <li><a href="#">Liên hệ</a></li>
+		<li>
+		<div class="input-field col ">
+    <select class="icons">
+      <option value="" data-icon="TiengViet.png" class="left circle">Tiếng Việt</option>
+      <option value="" data-icon="English.png" class="left circle">English</option>
+    </select>
+    <label>Chọn ngôn ngữ</label>
+  </div>
+		</li>
       </ul>
 	  
 
@@ -130,6 +139,7 @@
         <li><a href="#">home</a></li>
 		<li><a href="#">Hướng dẫn tìm vé</a></li>
 		<li><a href="#">Liên hệ</a></li>
+		
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -251,28 +261,28 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center brown-text"><img src="iconapi.png" height="70px" width="100px"></h2>
+            <h5 class="center">Sử dụng API được cung cấp bởi Google</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Ứng dụng sử dụng QPX Express API được cung cấp bởi Google cho kết quả tin cậy, nhanh chóng, chính xác.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h2 class="center brown-text"><img src="iconMaterial2.png" height="70px" width="100px"></h2>
+            <h5 class="center">Giao diện Material</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Phong cách thiết kế Material Design mang lại cho người dùng một trải nghiệm hiện đại, mới mẻ hơn và thú vị hơn. Đồng bộ với nhiều thiết bị có kích thước màn hình khác nhau.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center brown-text"><img src="iconCloud.png" height="70px" width="100px"></h2>
+            <h5 class="center">Sử dụng các công nghệ mới</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">Ứng dụng sử dụng Spring MVC Framework 4.2, project sử dụng công cụ Maven để quản lý và thiết lập tự động. Ứng dụng được triển khai trên Google Cloud mang lại nhiều lợi ích.</p>
           </div>
         </div>
       </div>
@@ -296,8 +306,8 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4>About project</h4>
+          <p class="left-align light">Nhu cầu đi lại bằng máy bay càng ngày càng nhiều, và trong tương lai máy bay dân sự sẽ càng ngày càng góp phần rút ngắn khoảng cách mọi nơi trên thế giới nói chung và ngay cả Việt Nam nói riêng. Có cầu sẽ có cung, thông thường các hãng hàng không sẽ cung ứng vé máy bay theo ba kênh: thông qua website bán vé trực tuyến, phòng vé hoặc đại lý chính thức có hợp đồng thương mại với hãng (được gọi là các đại lý cấp 1). Các hãng máy bay có doanh thu đa phần dựa trên doanh thu từ các Đại lý bán vé máy bay mang lại. Đại lý vé máy bay thường có 2 cấp, cấp 1 tức là cấp cao nhất, xuất vé trực tiếp từ hãng. Cấp 2, là nhánh con của cấp cấp 1, xuất vé chủ yếu từ cấp 1. Cũng có cấp 3, nhưng không chính thức, đó là hình thức cộng tác viên. Để làm một Đại lý vé máy bay, ngoài vốn, hợp đồng ký kết chính thức với các hãng, mặt bằng kinh doanh, kinh nghiệm bán vé đó là Website cho phép tra cứu và đặt vé máy bay và xuất vé trực tiếp từ các hãng. Website này đáp ứng đầy đủ các tính năng mà một đại lý bán vé máy bay cần có.</p>
         </div>
       </div>
 
